tests/ui/skip_with_other_options.stderr
error: proc-macro derive panicked
 --> $DIR/skip_with_other_options.rs:3:10
  |
3 | #[derive(StructOpt, Debug)]
  |          ^^^^^^^^^
  |
  = help: message: methods are not allowed for skipped fields
